# yudian-ai-tool

./: .gitattributes  .gitignore  .prettierignore  CHANGELOG.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: 00-README.md  01-PRODUCT_SPEC.md  02-TECH_STACK.md  03-ARCHITECTURE.md  04-MODBUS_PROTOCOL.md  05-PROJECT_STRUCTURE.md  06-DEV_AND_MOCK.md  07-TESTING.md  08-RELEASE_CICD.md  09-PITFALLS.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  ports.rs  state.rs  types.rs
src-tauri/src/backend/: mock.rs  mod.rs  real.rs
src-tauri/src/device/: actor.rs
src-tauri/src/modbus/: convert.rs  mod.rs  registers.rs  validate.rs
src/app/: AppShell.tsx
src/components/ui/: badge.tsx  button.tsx
src/features/connection/: ConnectionPanel.test.tsx  ConnectionPanel.tsx
src/features/curves/: CurvesPanel.test.tsx  CurvesPanel.tsx
src/features/monitor/: MonitorPanel.test.tsx  MonitorPanel.tsx
src/features/parameters/: ParametersPanel.test.tsx  ParametersPanel.tsx
src/features/shared/: display.ts
src/i18n/: zh-CN.ts
src/lib/: api.ts  auditLog.test.ts  auditLog.ts  curveStorage.test.ts  curveStorage.ts  types.ts  validation.test.ts  validation.ts
src/mocks/: mockApi.test.ts  mockApi.ts
src/mocks/snapshots/: bad-data.json  (+2 more)
src/stores/: appStore.ts  deviceStore.test.ts  deviceStore.ts
src/styles/: globals.css
