[package]
name = "yudian-ai-tool"
version = "0.3.8"
description = "Yudian AI temperature controller desktop tool"
authors = ["Yudian AI Tool Contributors"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "yudian_ai_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1.89"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-serial = "5.5.0"
tokio-modbus = { version = "0.17.0", default-features = false, features = ["rtu"] }
serialport = "4.9.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tauri-plugin-store = "2.4.3"
tauri-plugin-log = "2.8.0"
tauri-plugin-updater = "2.10.1"
